Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16376

Crash QtCreator when build directory renamed (continue QTCREATORBUG-16343)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.0.2
    • Qt Creator 4.0.1
    • None
    • Kubuntu 14.04
      qtc git rev: 4117ba7313506db14683ef14e73128bc2f5c80f1
    • 9739da5986d814ad6927ac09217a8cc593a29b1a (qbs)

      My project has two QBS file: t27retail_project.qbs and t27retail_terminal.qbs. See picture.
      Open t27retail_project.qbs in the first instance of QtC and t27retail_terminal.qbs - in second instance. The t27retail_project.qbs project built to directory 'build', t27retail_terminal.qbs built to directory 'build_terminal'.
      Now in the second instance of QtC rename directory 'build_terminal' to 'build'. QtC is crashed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            hkarel Karelin Pavel
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes