Fix potential crash in project setup.

If we
    - held an existing project open (in an IDE) and
    - changed its build directory and
    - a second qbs instance also held a project open there and
    - that second qbs instance used the same profile
then we would correctly detect that a competing build graph was already
present, but afterwards we would erroneously delete the build graph lock
object of the existing project, leading to a double-delete later when
the project itself was deleted.

Task-number: QTCREATORBUG-16376
Change-Id: Ie6c621f1dab5cc7b7ff97bf6c25d62609dc9eb35
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>